[gd_scene load_steps=4 format=3 uid="uid://c26cseexjqmt4"]

[ext_resource type="Script" uid="uid://mxogjir3wdgi" path="res://playable_characters/robots/tool_attachments/ToolCouplerComponent.gd" id="1_7d8h8"]

[sub_resource type="BoxMesh" id="BoxMesh_fk588"]
size = Vector3(0.2, 0.1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_eda61"]
size = Vector3(0.2, 0.1, 0.1)

[node name="ToolCouplerComponent" type="Area3D"]
script = ExtResource("1_7d8h8")

[node name="ConnectorBody" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_fk588")

[node name="ConnectorCollider" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_eda61")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="can_connect" from="." to="." method="_on_connector_component_can_connect"]
[connection signal="just_connected" from="." to="." method="_on_connector_component_just_connected"]
[connection signal="must_disconnect" from="." to="." method="_on_connector_component_must_disconnect"]
